--- a/app/views/home.html
+++ b/app/views/home.html
@@ -143,9 +143,8 @@
 								<li><a ui-sref="home.finance.controlcenter.hierarchy"><span translate="Finance.ControlCenter">Control Center</span> - <span translate="Common.HierarchyView">Hierarchy View</span></a></li>
 	                            <li><a ui-sref="home.finance.order.list"><span translate="Finance.Order">Orders</span> - <span translate="Common.ListView">List View</span></a></li>
 								<li role="separator" class="divider"></li>
-								<li class="dropdown-header"><span translate="Finance.Documents">Finance Documents</span></li>
-	                            <li><a ui-sref="home.finance.document.list"><span translate="Common.ListView">List View</span></a></li>
-								<li><a ui-sref="home.finance.document.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
+	                            <li><a ui-sref="home.finance.document.list"><span translate="Finance.Documents">Finance Documents</span> - <span translate="Common.ListView">List View</span></a></li>
+								<li><a ui-sref="home.finance.document.hierarchy"><span translate="Finance.Documents">Finance Documents</span> - <span translate="Common.HierarchyView">Hierarchy View</span></a></li>
 	                            <li><a ui-sref="home.finance.exgratelist">Exchange Rate List</a></li>
 								<li role="separator" class="divider"></li>
 	                            <li><a ui-sref="home.finance.report.balancesheet"><span translate="Finance.BalanceReport">Balance Sheet</span></a></li>
