--- a/app/views/finance/financedocument_currexg.html
+++ b/app/views/finance/financedocument_currexg.html
@@ -80,7 +80,7 @@
 		</div>
         
         <!-- Source part -->
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptSAmt" translate="Finance.Amount">Source Amount:</label>
                 <div class="col-sm-10">
@@ -114,7 +114,7 @@
         </div>
         
         <!-- Target part -->
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptTAmt" translate="Finance.Amount">Amount:</label>
                 <div class="col-sm-10">
