--- a/app/views/finance/financedocument_downpay.html
+++ b/app/views/finance/financedocument_downpay.html
@@ -55,10 +55,18 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" translate="Finance.SourceAccount">Src. Account:</label>
 			<div class="col-sm-10">
-				<selectize placeholder='Pick source account...' options='arFinanceAccount' config="srcaccountConfig" ng-model="srcAccountID" 
+				<selectize placeholder='Pick source account...' options='arFinanceAccount' config="srcaccountConfig" ng-model="SourceAccountID" 
 						ng-disabled="isReadonly" required></selectize>
 			</div>
 		</div>
+		
+        <div class="form-group">
+        	<label class="control-label col-sm-2" translate="Finance.TransactionType">Transaction Type:</label>
+            <div class="col-sm-10">
+            	<selectize placeholder='Pick tran type...' options='arFinanceTransactionType' config="srctrantypeConfig" ng-model="SourceTranTypeID"
+                   	ng-disabled="isReadonly" required="required"></selectize>
+            </div>
+        </div>
 		
 		<div class="form-group">
 			<label class="control-label col-sm-2" translate="Finance.Currency">Currency:</label>
@@ -92,7 +100,7 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" translate="Finance.SourceControlCenter">Src. Control Center </label>
 			<div class="col-sm-10">
-				<selectize placeholder='Pick control center...' options='arFinanceControlCenter' config="srcccConfig" ng-model="srcCCID"
+				<selectize placeholder='Pick control center...' options='arFinanceControlCenter' config="srcccConfig" ng-model="SourceCCID"
 						ng-disabled="isReadonly"></selectize>
 			</div>
 		</div>
