--- a/app/views/userdetail.html
+++ b/app/views/userdetail.html
@@ -13,4 +13,21 @@
 			</tr>
 		</tbody>
 	</table>
+	<br />
+	<table class="table table-striped table-hover">
+		<thead>
+			<tr>
+				<th translate="Common.Date">Date</th>
+				<th>Activity</th>
+				<th>Comment</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="row in arUserLog">
+				<td>{{row.Date}}</td>
+				<td>{{row.Activity}}</td>
+				<td>{{row.Comment}}</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
