--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,5 +1,65 @@
 <div id="viewWelcome">
-	<div class="jumbotron">
+	<div class="row">
+		<div class="col-sm-6 col-md-6">
+			<div class="thumbnail">
+				<img src="app\resource\hi.jpg" alt="Hello">
+				<div class="caption">
+					<h3><span translate="Mainpage.WelcomeBack">Welcome back</span>, {{CurrentUser.userdisplayas}}!</h3>
+					<table class="table table-striped table-hover">
+						<thead>
+							<tr>
+								<th>Activities</th>
+								<th>Info</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="row in listUsrAct">
+								<td>{{row.Activity}}</td>
+								<td>{{row.Detail}}</td>
+							</tr>
+						</tbody>
+					</table>
+					
+					<p>
+						<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
+							role="button"><span translate="Nav.TakeALookAtUserDetail">Take a look at User Detail</span></a>
+						<a href="#" class="btn btn-default" role="button">Logout</a>
+					</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-sm-6 col-md-6">
+			<div class="thumbnail">
+				<img src="app\resource\todo.jpg" alt="Todo.">
+				<div class="caption">
+					<h3><span>Recent activities</span></h3>
+					
+					<table class="table table-striped table-hover">
+						<thead>
+							<tr>
+								<th>Module</th>
+								<th>Info</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="row in listModInfo">
+								<td>{{row.Module}}</td>
+								<td>{{row.Detail}}</td>
+							</tr>
+						</tbody>
+					</table>
+					
+					<p>
+						<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
+							role="button"><span >Go for details</span></a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<!--<div class="jumbotron">
 		<h1><span translate="Mainpage.WelcomeBack">Welcome back</span>, {{CurrentUser.userdisplayas}}!</h1>
 		<p>
 			This is a home page. <br /> 
@@ -13,6 +73,6 @@
 			<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
 				role="button"><span translate="Nav.TakeALookAtUserDetail">Take a look at User Detail</span></a>
 		</p>
-	</div>
+	</div>-->
 </div>
 
