--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -23,7 +23,7 @@
 					<p>
 						<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
 							role="button"><span translate="Nav.TakeALookAtUserDetail">Take a look at User Detail</span></a>
-						<a href="#" class="btn btn-default" role="button">Logout</a>
+						<a class="btn btn-default btn-lg" role="button" ng-click="logout()">Logout</a>
 					</p>
 				</div>
 			</div>
@@ -39,20 +39,24 @@
 						<thead>
 							<tr>
 								<th>Module</th>
-								<th>Info</th>
+								<th>Date</th>
+								<th>Detail</th>
+								<th>Operation</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr ng-repeat="row in listModInfo">
 								<td>{{row.Module}}</td>
+								<td>{{row.Date}}</td>
 								<td>{{row.Detail}}</td>
+								<td><a class="btn btn-default btn-lg" role="button" ng-click="goDetail(row)"></a>Go Detail<td>
 							</tr>
 						</tbody>
 					</table>
 					
 					<p>
-						<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
-							role="button"><span >Go for details</span></a>
+						<a class="btn btn-primary btn-lg" ng-click="refreshTodo()"
+							role="button"><span >Refresh</span></a>
 					</p>
 				</div>
 			</div>
