--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -21,9 +21,9 @@
 					</table>
 					
 					<p>
-						<a class="btn btn-primary btn-lg" ui-sref="home.userdetail"
+						<a class="btn btn-primary" ui-sref="home.userdetail"
 							role="button"><span translate="Nav.TakeALookAtUserDetail">Take a look at User Detail</span></a>
-						<a class="btn btn-default btn-lg" role="button" ng-click="logout()">Logout</a>
+						<a class="btn btn-default" role="button" ng-click="logout()">Logout</a>
 					</p>
 				</div>
 			</div>
@@ -33,15 +33,15 @@
 			<div class="thumbnail">
 				<img src="app\resource\todo.jpg" alt="Todo.">
 				<div class="caption">
-					<h3><span>Recent activities</span></h3>
+					<h3><span>Activities in coming 2 weeks</span></h3>
 					
 					<table class="table table-striped table-hover">
 						<thead>
 							<tr>
 								<th>Module</th>
-								<th>Date</th>
+								<th translate="Common.Date">Date</th>
 								<th>Detail</th>
-								<th>Operation</th>
+								<th translate="Common.Operations">Operation</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -49,14 +49,14 @@
 								<td>{{row.Module}}</td>
 								<td>{{row.Date}}</td>
 								<td>{{row.Detail}}</td>
-								<td><a class="btn btn-default btn-lg" role="button" ng-click="goDetail(row)"></a>Go Detail<td>
+								<td><a class="btn btn-primary" role="button" ng-click="goDetail(row)">Go Detail</a><td>
 							</tr>
 						</tbody>
 					</table>
 					
 					<p>
-						<a class="btn btn-primary btn-lg" ng-click="refreshTodo()"
-							role="button"><span >Refresh</span></a>
+						<a class="btn btn-primary" ng-click="refreshTodo()"
+							role="button"><span translate="Common.Refresh">Refresh</span></a>
 					</p>
 				</div>
 			</div>
