--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-sm-6 col-md-6">
 			<div class="thumbnail">
-				<img src="app\resource\hi.jpg" alt="Hello">
+				<img src="app/resource/Hi.jpg" alt="Hello">
 				<div class="caption">
 					<h3><span translate="Mainpage.WelcomeBack">Welcome back</span>, {{CurrentUser.userdisplayas}}!</h3>
 					<table class="table table-striped table-hover">
@@ -31,7 +31,7 @@
 		
 		<div class="col-sm-6 col-md-6">
 			<div class="thumbnail">
-				<img src="app\resource\todo.jpg" alt="Todo.">
+				<img src="app/resource/ToDo.jpg" alt="Todo.">
 				<div class="caption">
 					<h3><span>Activities in coming 2 weeks</span></h3>
 					
