--- a/app/views/finance/financeaccount.html
+++ b/app/views/finance/financeaccount.html
@@ -49,6 +49,15 @@
 			</div>
 		</div>
 
+		<div class="panel panel-success" >
+			<div class="panel-heading">
+				<h3 class="panel-title">Downpayment</h3>
+			</div>
+			
+			<div class="panel-body">
+			</div>
+		</div>
+
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="ActivityID == 3"
