--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -9,7 +9,7 @@
 						<thead>
 							<tr>
 								<th>Activities</th>
-								<th>Info</th>
+								<th translate="Common.Detail">Detail</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -23,7 +23,7 @@
 					<p>
 						<a class="btn btn-primary" ui-sref="home.userdetail"
 							role="button"><span translate="Nav.TakeALookAtUserDetail">Take a look at User Detail</span></a>
-						<a class="btn btn-default" role="button" ng-click="logout()">Logout</a>
+						<a class="btn btn-default" role="button" ng-click="logout()"><span translate="Login.Logout">Logout</span></a>
 					</p>
 				</div>
 			</div>
@@ -40,7 +40,7 @@
 							<tr>
 								<th>Module</th>
 								<th translate="Common.Date">Date</th>
-								<th>Detail</th>
+								<th translate="Common.Detail">Detail</th>
 								<th translate="Common.Operations">Operation</th>
 							</tr>
 						</thead>
@@ -49,7 +49,7 @@
 								<td>{{row.Module}}</td>
 								<td>{{row.Date}}</td>
 								<td>{{row.Detail}}</td>
-								<td><a class="btn btn-primary" role="button" ng-click="goDetail(row)">Go Detail</a><td>
+								<td><a class="btn btn-primary" role="button" ng-click="goDetail(row)"><span translate="Common.GoDetail">Go Detail</span></a><td>
 							</tr>
 						</tbody>
 					</table>
