--- a/app/views/finance/financeaccount.html
+++ b/app/views/finance/financeaccount.html
@@ -49,12 +49,81 @@
 			</div>
 		</div>
 
-		<div class="panel panel-success" >
+		<div class="panel panel-success" ng-show="ShowDownpaymentInfo">
 			<div class="panel-heading">
-				<h3 class="panel-title">Downpayment</h3>
+				<h3 class="panel-title"><span translate="Finance.Downpayment">Downpayment</span></h3>
 			</div>
 			
 			<div class="panel-body">
+				<div class="form-group">
+					<label class="control-label col-sm-2">Direction</label>
+					<div class="col-sm-10">
+						<input class="form-control" readonly="readonly" ng-model="DPAccountInfo.Direct" />
+					</div>
+				</div>
+				
+				<div class="form-group">
+					<label class="control-label col-sm-2" translate="Finance.BeginDate">Start Date</label>
+					<div class="col-sm-10">
+						<input class="form-control" readonly="readonly" ng-model="DPAccountInfo.StartDate" />
+					</div>
+				</div>
+	
+				<div class="form-group">
+					<label class="control-label col-sm-2" translate="Finance.EndDate">End Date</label>
+					<div class="col-sm-10">
+						<input class="form-control" readonly="readonly" ng-model="DPAccountInfo.EndDate" />
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label class="control-label col-sm-2">Repeat Type</label>
+					<div class="col-sm-10">
+						<input class="form-control" readonly="readonly" ng-model="DPAccountInfo.RepeatType" />
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label class="control-label col-sm-2">Ref. Doc</label>
+					<div class="col-sm-10">
+						<input class="form-control" readonly="readonly" ng-model="DPAccountInfo.RefDocID" />
+					</div>
+				</div>
+				
+				<table st-table="DPTmpDoc" st-safe-src="SafeDPTmpDoc" class="table table-striped table-hover">
+					<thead>
+						<tr>
+							<th st-sort="did" translate="Common.ID">ID</th>
+							<th st-sort="refid">Ref Doc ID</th>
+							<th st-sort="ttyp" >Tran Type</th>
+							<th st-sort="tdate" translate="Common.Date">Date</th>
+							<th st-sort="amt" translate="Finance.Amount">Amount</th>
+							<th translate="Common.Operations">Operations</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="row in DPTmpDoc">
+							<td>{{row.DocID}}</td>
+							<td>{{row.RefDocID}}</td>
+							<td>{{row.TranTypeID}}</td>
+							<td>{{row.TranDate | date: 'yyyy.MM.dd'}}</td>
+							<td>{{row.Amount | currency:'￥':2}}</td>
+							<td>
+								<button type="button" class="btn btn-sm" ng-click="displayItem(row.DocID)" tooltip="{{'Common.Display' | translate}}">
+									<i class="glyphicon glyphicon-share">
+									</i>
+								</button>
+							</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<td colspan="6">
+								<cst-count></cst-count>
+							</td>
+						</tr>
+					</tfoot>
+				</table>
 			</div>
 		</div>
 
@@ -62,7 +131,7 @@
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="ActivityID == 3"
 					ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
-				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
+				<button class="btn btn-danger" ng-click="close()" translate="Common.BackToList">Back to List</button>
 			</div>
 		</div>
 	</form>
