--- a/app/views/finance/financedocument_downpay.html
+++ b/app/views/finance/financedocument_downpay.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     
-	<form class="form-horizontal" role="form" name="frmObj">
+	<div class="form-horizontal" role="form">
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptDocID" translate="Common.ID">ID:</label>
 			<div class="col-sm-10">
@@ -260,8 +260,8 @@
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
 					translate="Common.Submit">Submit</button>
-				<button class="btn btn-danger" ng-click="backtoList()" translate="Common.Cancel">Cancel</button>
+				<button class="btn btn-danger" ng-click="backtoList()" translate="Common.BackToList">Back To List</button>
 			</div>
 		</div>
-	</form>
+	</div>
 </div>
