--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -49,7 +49,7 @@
 								<td>{{row.Module}}</td>
 								<td>{{row.Date}}</td>
 								<td>{{row.Detail}}</td>
-								<td><a class="btn btn-primary" role="button" ng-click="goDetail(row)"><span translate="Common.GoDetail">Go Detail</span></a><td>
+								<td><a class="btn btn-primary" role="button" ng-click="goDetail(row)"><span translate="Common.Create">Create</span></a><td>
 							</tr>
 						</tbody>
 					</table>
