--- a/app/views/finance/financedocument.html
+++ b/app/views/finance/financedocument.html
@@ -27,7 +27,7 @@
 
     <!-- Header -->
     <div class="container" ng-show="showhdr">
-        <form class="form-horizontal" role="form" name="frmObj" style="margin: 30px, 10px;">
+        <div class="form-horizontal" role="form" style="margin: 30px, 10px;">
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptDocID" translate="Common.ID">ID:</label>
                 <div class="col-sm-10">
@@ -93,7 +93,7 @@
                             ng-readonly="isReadonly" ng-model="DocumentObject.Desp">
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 
     <!-- Items -->
@@ -156,70 +156,70 @@
             <div class="panel-heading">{{ItemActivity | translate}}</div>
             
             <div class="panel-body">
-            <form class="form-horizontal" role="form" name="frmItem">
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptItemID" translate="Finance.ItemID">Item ID:</label>
-                    <div class="col-sm-10">
-      					<p class="form-control-static" id="iptItemID">{{SelectedDocumentItem.ItemID}}</p>
-    				</div>
-                </div>
+                <div class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="iptItemID" translate="Finance.ItemID">Item ID:</label>
+                        <div class="col-sm-10">
+                            <p class="form-control-static" id="iptItemID">{{SelectedDocumentItem.ItemID}}</p>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label class="control-label col-sm-2" translate="Finance.Account">Account:</label>
-                    <div class="col-sm-10">
-                        <selectize placeholder='Pick account...' options='arFinanceAccount' config="accountConfig" ng-model="SelectedDocumentItem.AccountID"
-                                   ng-disabled="isReadonly" required="required"></selectize>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" translate="Finance.Account">Account:</label>
+                        <div class="col-sm-10">
+                            <selectize placeholder='Pick account...' options='arFinanceAccount' config="accountConfig" ng-model="SelectedDocumentItem.AccountID"
+                                    ng-disabled="isReadonly" required="required"></selectize>
+                        </div>
                     </div>
-                </div>
-                
-                <div class="form-group">
-                    <label class="control-label col-sm-2" translate="Finance.TransactionType">Transaction Type:</label>
-                    <div class="col-sm-10">
-                        <selectize placeholder='Pick tran type...' options='arFinanceTransactionType' config="trantypeConfig" ng-model="SelectedDocumentItem.TranTypeID"
-                                   ng-disabled="isReadonly" required="required"></selectize>
+                    
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" translate="Finance.TransactionType">Transaction Type:</label>
+                        <div class="col-sm-10">
+                            <selectize placeholder='Pick tran type...' options='arFinanceTransactionType' config="trantypeConfig" ng-model="SelectedDocumentItem.TranTypeID"
+                                    ng-disabled="isReadonly" required="required"></selectize>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptItemAmt" translate="Finance.Amount">Amount:</label>
-                    <div class="col-sm-10">
-                        <input type="text" id="iptItemAmt" ng-readonly="isReadonly" class="form-control" ng-model="SelectedDocumentItem.TranAmount_Org" required="required"></input>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="iptItemAmt" translate="Finance.Amount">Amount:</label>
+                        <div class="col-sm-10">
+                            <input type="text" id="iptItemAmt" ng-readonly="isReadonly" class="form-control" ng-model="SelectedDocumentItem.TranAmount_Org" required="required"></input>
+                        </div>
                     </div>
-                </div>
-                
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptItemDesp" translate="Common.Description">Desp: </label>
-                    <div class="col-sm-10">
-                        <input type="text" id="iptItemDesp" ng-readonly="isReadonly" class="form-control" ng-model="SelectedDocumentItem.Desp" required="required"></input>
-			        </div>
-		        </div>
+                    
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="iptItemDesp" translate="Common.Description">Desp: </label>
+                        <div class="col-sm-10">
+                            <input type="text" id="iptItemDesp" ng-readonly="isReadonly" class="form-control" ng-model="SelectedDocumentItem.Desp" required="required"></input>
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <label class="control-label col-sm-2" translate="Finance.ControlCenter">Control Center</label>
-                    <div class="col-sm-10">
-                        <selectize placeholder='Pick control center...' options='arFinanceControlCenter' config="ccConfig" ng-model="SelectedDocumentItem.ControlCenterID"
-                                ng-disabled="isReadonly" optional></selectize>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" translate="Finance.ControlCenter">Control Center</label>
+                        <div class="col-sm-10">
+                            <selectize placeholder='Pick control center...' options='arFinanceControlCenter' config="ccConfig" ng-model="SelectedDocumentItem.ControlCenterID"
+                                    ng-disabled="isReadonly" optional></selectize>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label class="control-label col-sm-2" translate="Finance.Order">Order:</label>
-                    <div class="col-sm-10">
-                        <selectize placeholder='Pick order ...' options='arFinanceOrder' config="orderConfig" ng-model="SelectedDocumentItem.OrderID"
-                                 ng-disabled="isReadonly" optional></selectize>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" translate="Finance.Order">Order:</label>
+                        <div class="col-sm-10">
+                            <selectize placeholder='Pick order ...' options='arFinanceOrder' config="orderConfig" ng-model="SelectedDocumentItem.OrderID"
+                                    ng-disabled="isReadonly" optional></selectize>
+                        </div>
                     </div>
-                </div>
 
-                <!-- Button group -->
-                <div class="form-group">
-                	<div class="col-sm-10">
-                    	<button class="btn btn-default btn-primary" ng-click="saveCurrentItem()" ng-hide="isReadonly"
-                            translate="Finance.SaveCurrentItem">Save Item</button>
-                        		<!--ng-disabled="frmItem.$invalid || !frmItem.$dirty" -->                                
-                        <button class="btn btn-danger" ng-click="cancelCurrentItem()" translate="Finance.CancelItemEditing">Cancel Item Editing</button>
+                    <!-- Button group -->
+                    <div class="form-group">
+                        <div class="col-sm-10">
+                            <button class="btn btn-default btn-primary" ng-click="saveCurrentItem()" ng-hide="isReadonly"
+                                translate="Finance.SaveCurrentItem">Save Item</button>
+                                    <!--ng-disabled="frmItem.$invalid || !frmItem.$dirty" -->                                
+                            <button class="btn btn-danger" ng-click="cancelCurrentItem()" translate="Finance.CancelItemEditing">Cancel Item Editing</button>
+                        </div>
                     </div>
                 </div>
-            </form>
             </div>
         </div>
     </div>
