--- a/app/views/finance/financedpdoc_post.html
+++ b/app/views/finance/financedpdoc_post.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     
-	<form class="form-horizontal" role="form" name="frmObj">
+	<div class="form-horizontal" role="form">
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptDocID" translate="Common.ID">ID:</label>
 			<div class="col-sm-10">
@@ -111,5 +111,5 @@
 				<button class="btn btn-danger" ng-click="backtoList()" translate="Common.Cancel">Cancel</button>
 			</div>
 		</div>
-	</form>
+	</div>
 </div>
