Continues the development.

--- a/app/views/finance/financetransactiontypelist.html
+++ b/app/views/finance/financetransactiontypelist.html
@@ -21,7 +21,7 @@
 				<td>{{row.ID}}</td>
 				<td>{{row.Name}}</td>
 				<td>{{row.ExpenseFlag}}</td>
-				<td>{{row.ParentID}}</td>
+				<td>{{row.ParentID | idTostring}}</td>
 				<td>{{row.Comment}}</td>
 			</tr>
 		</tbody>
