Continues the development.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -154,16 +154,20 @@
 								<li><a ui-sref="home.finance.report.orderbalance"><span translate="Finance.OrderReport">Order Report</span></a></li>
 	                        </ul>
 	                    </li>
-	                    <!--<li class="dropdown" dropdown>
+	                    <li class="dropdown" dropdown>
 	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.Libraries">Libraries</span><b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
-								<li class="dropdown-header">Books</li>
-								<li><a ui-sref="home.lib.book.list"><span translate="Common.ListView">List View</span></a></li>
+                                <li><a ui-sref="home.lib.language.list"><span translate="Common.Language">Language</span></a></li>
+                                <li><a ui-sref="home.lib.person.list">Person</a></li>
+                                <li><a ui-sref="home.lib.org.list">Organization</a></li>
+                                <li><a ui-sref="home.lib.loc.list">Location</a></li>
+                                <li role="separator" class="divider"></li>
+								<li><a ui-sref="home.lib.book.list"><span translate="Lib.Books">Books</span> - <span translate="Common.ListView">List View</span></a></li>
 								<li role="separator" class="divider"></li>
-								<li class="dropdown-header">Movies</li>
-								<li><a ui-sref="home.lib.book.list"><span translate="Common.ListView">List View</span></a></li>
+								<!--<li class="dropdown-header">Movies</li>
+								<li><a ui-sref="home.lib.book.list"><span translate="Common.ListView">List View</span></a></li>-->
 	                        </ul>
-	                    </li>-->
+	                    </li>
 	                    <li><a href="#/about"><span translate="Nav.About">About</span></a></li>
 	                </ul>
 	                
