--- a/app/views/home.html
+++ b/app/views/home.html
@@ -158,9 +158,9 @@
 	                        <a role="button" class="dropdown-toggle" dropdown-toggle><span translate="Nav.Libraries">Libraries</span><b class="caret"></b></a>
 	                        <ul class="dropdown-menu">
                                 <li><a ui-sref="home.lib.language.list"><span translate="Common.Language">Language</span></a></li>
-                                <li><a ui-sref="home.lib.person.list">Person</a></li>
-                                <li><a ui-sref="home.lib.org.list">Organization</a></li>
-                                <li><a ui-sref="home.lib.loc.list">Location</a></li>
+                                <li><a ui-sref="home.lib.person.list"><span translate="Lib.Person">Person</span></a></li>
+                                <li><a ui-sref="home.lib.org.list"><span translate="Lib.Organization">Organization</span></a></li>
+                                <li><a ui-sref="home.lib.loc.list"><span translate="Lib.Locations">Locations</span></a></li>
                                 <li role="separator" class="divider"></li>
 								<li><a ui-sref="home.lib.book.list"><span translate="Lib.Books">Books</span> - <span translate="Common.ListView">List View</span></a></li>
 								<li role="separator" class="divider"></li>
