--- a/app/views/lib/location.html
+++ b/app/views/lib/location.html
@@ -1,2 +1,53 @@
 <div id="viewLibLoc">
+	<div class="page-header">
+		<h2>
+            <span translate="Lib.Location">Location</span><small> {{Activity | translate}}</small>
+		</h2>
+	</div>
+
+	<div class="form-horizontal" role="form" name="frmObj">
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptID" translate="Common.ID">ID</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="iptID"
+					readonly="readonly" placeholder="{{'Common.ID' | translate}}" ng-model="objLearnObject.ID">
+			</div>
+		</div>
+		
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptCtgy" translate="Common.Category">Category:</label>
+			<div class="col-sm-10">
+				<select id="iptCtgy" ng-model="objLearnObject.CategoryID" ng-disabled="isReadonly"
+					ng-options="ctgy.ID as ctgy.FullDisplayText for ctgy in CategoryIDs">
+					<!-- Example 1:  color.name group by color.shade disable when color.notAnOption for color in colors
+      					Example 2: usertype.value as usertype.text for usertype in userTypes 
+      				-->
+				</select>
+			</div>
+		</div>
+		
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptName" translate="Common.Name">Name</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="iptName" ng-readonly="isReadonly"
+						placeholder="{{'Common.Name' | translate}}" ng-model="objLearnObject.Name" required>
+			</div>
+		</div>
+		
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptContent" translate="Common.Content">Content</label>
+			<div class="col-sm-10">
+				<textarea ui-tinymce="tinymceOptions" rows="20" ng-readonly="isReadonly"
+					        ng-model="objLearnObject.Content"></textarea>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
+					translate="Common.Submit">Submit</button>
+				<button class="btn btn-danger" ng-click="close()" translate="Common.BackToList">Cancel</button>
+			</div>
+		</div>
+	</div>
 </div>
