--- a/app/views/lib/location.html
+++ b/app/views/lib/location.html
@@ -15,33 +15,29 @@
 		</div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptCtgy" translate="Common.Category">Category:</label>
-			<div class="col-sm-10">
-				<select id="iptCtgy" ng-model="objLearnObject.CategoryID" ng-disabled="isReadonly"
-					ng-options="ctgy.ID as ctgy.FullDisplayText for ctgy in CategoryIDs">
-					<!-- Example 1:  color.name group by color.shade disable when color.notAnOption for color in colors
-      					Example 2: usertype.value as usertype.text for usertype in userTypes 
-      				-->
-				</select>
-			</div>
-		</div>
-		
-		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptName" translate="Common.Name">Name</label>
 			<div class="col-sm-10">
 				<input type="text" class="form-control" id="iptName" ng-readonly="isReadonly"
 						placeholder="{{'Common.Name' | translate}}" ng-model="objLearnObject.Name" required>
 			</div>
 		</div>
-		
+
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptContent" translate="Common.Content">Content</label>
+			<label class="control-label col-sm-2" for="iptDetail" translate="Common.Name">Name</label>
 			<div class="col-sm-10">
-				<textarea ui-tinymce="tinymceOptions" rows="20" ng-readonly="isReadonly"
-					        ng-model="objLearnObject.Content"></textarea>
+				<input type="text" class="form-control" id="iptDetail" ng-readonly="isReadonly"
+						placeholder="{{'Common.Detail' | translate}}" ng-model="objLearnObject.Name" required>
 			</div>
 		</div>
 
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="iptComment" translate="Common.Name">Name</label>
+			<div class="col-sm-10">
+				<input type="text" class="form-control" id="iptComment" ng-readonly="isReadonly"
+						placeholder="{{'Common.Comment' | translate}}" ng-model="objLearnObject.Name" required>
+			</div>
+		</div>
+		
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
